# serpent-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: serpent.hpp
scripts/: transform_table.py
src/: serpent.cpp
tables/: CMakeLists.txt
tables/include/: serpent_tables.hpp
tables/src/: serpent_tables.cpp
test/basic-usage/: CMakeLists.txt  main.cpp
test/debug/: CMakeLists.txt  main.cpp
test/simple/: CMakeLists.txt  main.cpp
